# SFML-EnTT

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  astro.config.mjs  keystatic.config.ts  package-lock.json  package.json  prettier.config.cjs
assets/: map..tmx  map.json  map_test.json
cms/: keystatic.config.ts  package-lock.json  package.json
cms/src/content/: config.ts
cms/src/fields/: index.ts
components/: position.hpp  velocity.hpp
configs/: config.json  effects.json
data/: items.json  units.json
entities/: projectile.cpp  projectile.md
forms/: gameForm.txt  hudForm.txt
public/: map.json
schema/: README.md  items.schema.json  units.schema.json
src/: animationPlayer.cpp  animationPlayer.hpp  config.cpp  config.hpp  gui.cpp  gui.hpp  hud.cpp  hud.hpp  main.cpp  map.cpp  map.hpp  pch.hpp  stateManager.cpp  stateManager.hpp  utils.cpp  utils.hpp
src/assets/: items.aseprite  units.aseprite
src/components/: area.hpp  attach.hpp  attribute.hpp  children.hpp  collider.hpp  cooldown.hpp  damage.hpp  destination.hpp  direction.hpp  faction.hpp  health.hpp  healthRegen.hpp  lifespan.hpp  lookDirection.hpp  maxHealth.hpp  modifiers.hpp  parent.hpp  playerControlled.hpp  pointsAt.hpp  position.hpp  range.hpp  recalculate.hpp  relationship.hpp  remove.hpp  renderable.hpp  shape.hpp  size.hpp  source.hpp  speed.hpp  target.hpp  unit.hpp  visible.hpp
src/content/area/: circle.json  cone.json  point.json  rectangle.json
src/content/attribute/: damage.json  health-regen.json  health.json  max-damage.json  max-health.json  min-damage.json  radius.json  range.json  speed.json  trigger.json
src/content/effects/: 1.json  2.json  3.json
src/content/group/: ally.json  enemy.json  self.json
src/content/items/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
src/content/kind/: attack.json  damage.json  energy.json  heal.json  shield.json
src/content/moment/: active.json  cooldown.json  step.json
src/content/place/: ground.json  target.json
src/content/scope/: flat-last.json  flat.json  (+3 more)
src/entities/: CMakeLists.txt  attribute.cpp  attribute.hpp  entities.md  player.cpp  player.hpp  projectile.cpp  projectile.hpp  unit.cpp  unit.hpp
src/features/: CMakeLists.txt
src/features/ability/components/: ability.hpp  active.hpp  cast.hpp  castEvent.hpp  cooldown.hpp  delay.hpp  pointsAt.hpp  ready.hpp  slot.hpp  trigger.hpp
src/features/ability/entities/: ability.cpp  ability.hpp  event.cpp  event.hpp
src/features/ability/systems/: clearEvents.cpp  clearEvents.hpp  processAbility.cpp  processAbility.hpp
src/features/animation/components/: color.hpp  elapsedTime.hpp  frame.hpp  timer.hpp
src/features/animation/entities/: animation.cpp  animation.hpp
src/features/animation/loader/: animationLoader.cpp  animationLoader.hpp
src/features/animation/systems/: removeAnimation.cpp  removeAnimation.hpp  renderAnimation.cpp  renderAnimation.hpp  updateFrame.cpp  updateFrame.hpp
src/features/effect/components/: affected.hpp  duration.hpp  effect.hpp  effects.hpp  refresh.hpp  stacks.hpp  type.hpp
src/features/effect/entities/: effect.cpp  effect.hpp
src/features/effect/loader/: effectLoader.cpp  effectLoader.hpp  effectsLoader.cpp  effectsLoader.hpp
src/features/effect/models/: effects.hpp
src/features/effect/systems/: applyEffects.cpp  applyEffects.hpp  processEffects.cpp  processEffects.hpp
src/features/enemy/components/: aiControlled.hpp
src/features/enemy/entities/: enemy.cpp  enemy.hpp
src/features/enemy/systems/: followPlayer.cpp  followPlayer.hpp
src/features/hitbox/components/: hitbox.hpp
src/features/hitbox/entities/: hitbox.cpp  hitbox.hpp
src/features/hitbox/systems/: isOnScreen.cpp  isOnScreen.hpp  processHitbox.cpp  processHitbox.hpp  processInteraction.cpp  processInteraction.hpp  processLifeSpan.cpp  processLifeSpan.hpp
src/features/item/components/: dropSpread.hpp  dropped.hpp  equipped.hpp  itemId.hpp
src/features/item/entities/: item.cpp  item.hpp
src/features/item/loader/: itemsLoader.cpp  itemsLoader.hpp
src/features/item/renderers/: renderItems.cpp  renderItems.hpp
src/features/item/systems/: dropItems.cpp  dropItems.hpp
src/features/map/: map.cpp  map.hpp
src/features/map/components/: rectCollider.hpp
src/features/map/entities/: tileCollider.cpp  tileCollider.hpp
src/features/map/systems/: checkTileCollision.cpp  checkTileCollision.hpp
src/features/npc/components/: npc.hpp
src/features/npc/entities/: npc.cpp  npc.hpp
src/features/npc/systems/: checkInteraction.cpp  checkInteraction.hpp
src/features/player/components/: camera.hpp  cooldown.hpp  initialCooldown.hpp  playerControlled.hpp  roll.hpp
src/features/player/entities/: player.cpp  player.hpp  player.hpp-f2f5e9e5
src/features/player/managers/: inputManager.cpp  inputManager.hpp
src/features/player/systems/: playerCamera.cpp  playerCamera.hpp  playerInput.cpp  playerInput.hpp  playerShoot.cpp  playerShoot.hpp
src/features/projectile/components/: isProjectile.hpp
src/features/projectile/entities/: projectile.cpp  projectile.hpp
src/features/projectile/systems/: checkCollision.cpp  checkCollision.hpp  isOnScreen.cpp  isOnScreen.hpp
src/features/unit/loader/: unitsLoader.cpp  unitsLoader.hpp
src/features/unit/renderers/: renderUnits.cpp  renderUnits.hpp
src/renderers/: CMakeLists.txt  drawHealthbars.cpp  drawHealthbars.hpp  drawShapes.cpp  drawShapes.hpp
src/systems/: CMakeLists.txt  applyUnitStat.cpp  applyUnitStat.hpp  attachEntities.cpp  attachEntities.hpp  cleanupRemoved.cpp  cleanupRemoved.hpp  moveEntities.cpp  moveEntities.hpp  playerInput.cpp  playerInput.hpp  processCooldown.cpp  processCooldown.hpp  processDeath.cpp  processDeath.hpp  processInvalid.cpp  processInvalid.hpp  processLifespan.cpp  processLifespan.hpp  processPhysics.cpp  processPhysics.hpp  processPosition.cpp  processPosition.hpp  processVisibility.cpp  processVisibility.hpp  recalculateStat.cpp  recalculateStat.hpp  regenerateHealth.cpp  regenerateHealth.hpp
systems/: playerInput.cpp  playerInput.hpp
(+66 files in other folders)
